--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
       "pino-pretty": "^9.0.1",
       "pug": "^3.0.2",
       "qs": "^6.11.0",
+      "rollbar": "^2.26.4",
       "sqlite3": "^5.1.7",
       "webpack": "^5.74.0"
    },
