--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,7 +22,14 @@ jobs:
           cache: 'npm'
       - run: make setup
       - run: make lint
-      - run: make test
+
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v2.5.7
+        env: 
+          CC_TEST_REPORTER_ID: ${{ secrets.CODECLIMATE_ID }}
+        with:
+          coverageCommand: make test
+          debug: true
 
 
   deploy:
